--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,8 +4,34 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="../css/all.min.css">
+	<link rel="stylesheet" href="../css/animate3.min.css">
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../css/index.css">
+	<script src="../js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
-	
+	<div class="all-wrapper" style="background-image: url(../img/01d.jpg);">
+		<div class="title-wrapper">
+			<div class="title-wrap">
+				<div class="version">v1.0</div>
+				<h1 class="title">대한민국 날씨정보</h1>
+			</div>
+			<div class="img-wrap">
+				<img class="icon mw-100" src="../img/cloudy.png" alt="아이콘">
+			</div>
+		</div>
+		<div class="cont-wrapper wrapper">
+			<div class="map-wrap" id="map">
+				
+			</div>
+			<div class="weather-wrap">
+				
+			</div>
+		</div>
+	</div>
+
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cd85347e3ff4d4312dd4f3f9d775ce8a"></script>
+	<script src="../js/index.js"></script>
 </body>
 </html>
