--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,7 +10,8 @@
 	<link rel="stylesheet" href="../css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="../css/index.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
-	<script src="../js/swiper-bundle.min.js"></script>
+   <script src="../js/swiper-bundle.min.js"></script>
+   <script src="../js/moment.min.js"></script>
 </head>
 <body>
 	<div class="all-wrapper" style="background-image: url(../img/01d.jpg);">
@@ -24,18 +25,53 @@
 			</div>
 		</div>
 		<div class="cont-wrapper wrapper">
+			<!-- PC지도 -->
 			<div class="map-wrap" id="map">
 				
 			</div>
+			<!-- 모바일지도 -->
 			<div class="city-wrap">
 				<div class="swiper-container">
-					<div class="swiper-wrapper"></div>
+					<div class="swiper-wrapper"><!-- 지역정보 --></div>
 				</div>
 				<div class="bt-arrow bt-prev">〈</div>
 				<div class="bt-arrow bt-next">〉</div>
 			</div>
+			<!-- 날씨정보 -->
 			<div class="weather-wrap">
-				
+				<div class="daily-container">
+					<h2 class="city">Jamwon-Dong, KR</h2>
+					<div class="info-wrapper">
+						<div class="img-wrap">
+							<img src="http://openweathermap.org/img/wn/01d@2x.png" alt="날씨아이콘" class="mw-100">
+						</div>
+						<div class="temp-wrap">
+                     <h3>-15.3˚</h3>
+                     <div>(체감 -18.7˚)</div>
+                  </div>
+						<div class="info-wrap">
+							<div class="desc">
+                        <h3 class="main">Clear Sky<small>(온구름)</small></h3>
+							</div>
+							<div class="temp">
+								<span class="title">최고</span>
+								<span class="info">-15.3˚</span>
+								<span class="divide">|</span>
+								<span class="title">최저</span>
+								<span class="info">-15.3˚</span>
+							</div>
+							<div class="wind">
+								<span class="title">바람</span>
+								<span class="arrow fa fa-arrow-down"></span>
+								<span class="info">2.3㎧</span>
+							</div>
+							<div class="date">
+								<span class="title">2021년 01월 07일 10시 기준</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="weekly-wrap"></div>
 			</div>
 		</div>
 	</div>
